Added new project

--- a/projects.html
+++ b/projects.html
@@ -57,82 +57,102 @@
         <div class="row">
           <div class="col-md-6">
             <div class="project-img-bg shadow">
-              <img src="/src/images/Chihuahua.png" id="Chihuahua-img" title="Chihuahua img" alt="Chihuahua img"
-                class="img-fluid rounded" />
+              <img src="/src/images/react_weather_app.png" id="react_weather_app-img" title="React weather app img"
+                alt="React weather app img" class="img-fluid rounded" />
             </div>
           </div>
           <div class="col-md-5 border shadow p-3" id="project-description">
-            <h4 class="mb-3 mt-2">Chihuahua landing page</h4>
+            <h4 class="mb-3 mt-2">React weather app</h4>
             <p>
-              I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I
-              used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about
-              Chihuahuas. The page utilizes JavaScript functions to create user interaction.
+              I built a React JavaScript weather app in SheCodes React coding workshop. I combined new skills and
+              previously-gained knowledges to create it.
             </p>
             <div class="mb-3 mt-5">
-              <a href="https://chihuahua-dog.netlify.app/" target="_blank" class="primary-link"
-                title="Chihuahua landing page">Explore page</a>
+              <a href="https://react-weather-app-from-vilena.netlify.app/" target="_blank" class="primary-link"
+                title="React weather app">Launch
+                app</a>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6">
               <div class="project-img-bg shadow">
-                <img src="/src/images/weather_app_img.png" id="weather-img" title="weather app" alt="weather app"
+                <img src="/src/images/Chihuahua.png" id="Chihuahua-img" title="Chihuahua img" alt="Chihuahua img"
                   class="img-fluid rounded" />
               </div>
             </div>
             <div class="col-md-5 border shadow p-3" id="project-description">
-              <h4 class="mb-3 mt-2">Weather app</h4>
+              <h4 class="mb-3 mt-2">Chihuahua landing page</h4>
               <p>
-                Before you go anywhere, it's always important to check the weather. <i
-                  class="fa-solid fa-temperature-high"></i><br>
-                I built a Vanilla JavaScript weather app in SheCodes Plus JavaScript coding workshop.
-                Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API's, real-life
-                development
-                workflow and
-                hosting. I combined these skills to create the weather app.
+                I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I
+                used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about
+                Chihuahuas. The page utilizes JavaScript functions to create user interaction.
               </p>
               <div class="mb-3 mt-5">
-                <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link"
-                  title="weather app">Launch
-                  app</a>
+                <a href="https://chihuahua-dog.netlify.app/" target="_blank" class="primary-link"
+                  title="Chihuahua landing page">Explore page</a>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="project-img-bg shadow">
-                <img src="/src/images/portfolio-example-img.png" id="portfolio-img" title="portfolio app"
-                  alt="portfolio app" class="img-fluid rounded" />
+            <div class="row">
+              <div class="col-md-6">
+                <div class="project-img-bg shadow">
+                  <img src="/src/images/weather_app_img.png" id="weather-img" title="weather app" alt="weather app"
+                    class="img-fluid rounded" />
+                </div>
+              </div>
+              <div class="col-md-5 border shadow p-3" id="project-description">
+                <h4 class="mb-3 mt-2">Weather app</h4>
+                <p>
+                  Before you go anywhere, it's always important to check the weather. <i
+                    class="fa-solid fa-temperature-high"></i><br>
+                  I built a Vanilla JavaScript weather app in SheCodes Plus JavaScript coding workshop.
+                  Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API's, real-life
+                  development
+                  workflow and
+                  hosting. I combined these skills to create the weather app.
+                </p>
+                <div class="mb-3 mt-5">
+                  <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link"
+                    title="weather app">Launch
+                    app</a>
+                </div>
               </div>
             </div>
-            <div class="col-md-5 border shadow p-3" id="project-description">
-              <h4 class="mb-3 mt-2">Portfolio example project</h4>
-              <p>
-                I built a Portfolio example maket in SheCodes Responsive coding workshop.
-                I've learnt about Multiple HTML Pages, Advanced HTML Links, CSS Variables, Flexbox, Utility CSS Classes,
-                Responsive Design, CSS Media Queries, SEO, Wireframe.
+            <div class="row">
+              <div class="col-md-6">
+                <div class="project-img-bg shadow">
+                  <img src="/src/images/portfolio-example-img.png" id="portfolio-img" title="portfolio app"
+                    alt="portfolio app" class="img-fluid rounded" />
+                </div>
+              </div>
+              <div class="col-md-5 border shadow p-3" id="project-description">
+                <h4 class="mb-3 mt-2">Portfolio example project</h4>
+                <p>
+                  I built a Portfolio example maket in SheCodes Responsive coding workshop.
+                  I've learnt about Multiple HTML Pages, Advanced HTML Links, CSS Variables, Flexbox, Utility CSS
+                  Classes,
+                  Responsive Design, CSS Media Queries, SEO, Wireframe.
 
-              </p>
-              <div class="mb-3 mt-5">
-                <a href="https://projects-portfolio-example.netlify.app/" target="_blank" class="primary-link"
-                  title="portfolio app">Explore project</a>
+                </p>
+                <div class="mb-3 mt-5">
+                  <a href="https://projects-portfolio-example.netlify.app/" target="_blank" class="primary-link"
+                    title="portfolio app">Explore project</a>
+                </div>
               </div>
             </div>
           </div>
+
+          <footer>
+            <div class="d-flex justify-content-center mt-2" id="contacts">
+              <h5 id="footer" class="m-4">Let's get in touch!</h5>
+              <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
+                  class="fa-regular fa-envelope m-4"></i></a>
+
+              <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
+                class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
+              <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
+                class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
+          </footer>
         </div>
-
-        <footer>
-          <div class="d-flex justify-content-center mt-2" id="contacts">
-            <h5 id="footer" class="m-4">Let's get in touch!</h5>
-            <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
-                class="fa-regular fa-envelope m-4"></i></a>
-
-            <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
-              class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
-            <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
-              class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
-        </footer>
-      </div>
   </body>
 
 </html>
