--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" title="About Vilena Martirosova page" target="_blank" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Projects page"  target="_blank" href="/projects.html">Projects</a>
+              <a class="nav-link" title="Projects page" target="_blank" href="/projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Contacts page" target="_blank" href="/contact.html">Contacts</a>
@@ -65,6 +65,34 @@
       <div class="row">
         <div class="col-md-5 mt-1 mb-5">
           <div class="project-img-bg shadow">
+            <img src="/src/images/react_weather_app.png" class="img-fluid shadow" id="project-img"
+              alt="Weather app img" />
+          </div>
+          <div class="btn-shadow">
+            <a href="/projects.html#react_weather_app-img" target="_blank" id="btn-follow-projects">
+              <p class="secondary-link">React Weather app</p>
+            </a>
+          </div>
+          <div class="icons">
+
+            <div><img src="/src/images/CSS.png" class="img-fluid" title="CSS icon" id="CSS-img" alt="CSS img"
+                width="30" /><br>CSS
+            </div>
+            <div><img src="/src/images/JavaScript.png" class="img-fluid" title="JavaScript icon" id="JavaScript-img"
+                alt="JavaScript img" width="30" /></a><br>JavaScript</div>
+            <div><img src="/src/images/React.png" class="img-fluid" title="React icon" id="React-img" alt="React img"
+                width="30" /><br>React
+            </div>
+            <div><img src="/src/images/Responsive.png" class="img-fluid" title="Responsive Design icon"
+                id="Responsive-Design-img" alt="Responsive Design img" width="30" /><br>Responsive Design
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
+                alt="Hosting img" width="30" /><br>Hosting
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 mt-1 mb-5">
+          <div class="project-img-bg shadow">
             <img src="/src/images/weather_app_img.png" class="img-fluid shadow" id="project-img"
               alt="Weather app img" />
           </div>
@@ -74,17 +102,19 @@
             </a>
           </div>
           <div class="icons">
-            <div><img src="/src/images/HTML.png" class="img-fluid"  title="HTML icon" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+            <div><img src="/src/images/HTML.png" class="img-fluid" title="HTML icon" id="HTML-img" alt="HTML img"
+                width="30" /><br>HTML
             </div>
-            <div><img src="/src/images/CSS.png" class="img-fluid" title="CSS icon" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+            <div><img src="/src/images/CSS.png" class="img-fluid" title="CSS icon" id="CSS-img" alt="CSS img"
+                width="30" /><br>CSS
             </div>
-            <div><img src="/src/images/JavaScript.png" class="img-fluid" title="JavaScript icon" id="JavaScript-img" alt="JavaScript img"
-                width="30" /></a><br>JavaScript</div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
-                width="30" /><br>Flexbox
+            <div><img src="/src/images/JavaScript.png" class="img-fluid" title="JavaScript icon" id="JavaScript-img"
+                alt="JavaScript img" width="30" /></a><br>JavaScript</div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img"
+                alt="Flexbox img" width="30" /><br>Flexbox
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
+                alt="Hosting img" width="30" /><br>Hosting
             </div>
           </div>
         </div>
@@ -97,18 +127,19 @@
               <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
             </a></div>
           <div class="icons">
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img" alt="Bootstrap img"
-                width="30" /><br>Bootstrap</div>
-                       <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
-                width="30" /><br>Flexbox
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img"
+                alt="Bootstrap img" width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img"
+                alt="Flexbox img" width="30" /><br>Flexbox
             </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
+                width="30" /><br>SEO
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
+                alt="Hosting img" width="30" /><br>Hosting
             </div>
-            <div><img src="/src/images/Responsive.png" class="img-fluid" title="Responsive icon" id="Responsive-img" alt="Responsive img"
-                width="30" /><br>Responsive <br>Design</div>
+            <div><img src="/src/images/Responsive.png" class="img-fluid" title="Responsive icon" id="Responsive-img"
+                alt="Responsive img" width="30" /><br>Responsive <br>Design</div>
           </div>
         </div>
         <div class="col-md-5 mb-5 mt-3">
@@ -119,18 +150,20 @@
               <p class="secondary-link">Landing page</p>
             </a></div>
           <div class="icons">
-            <div><img src="/src/images/HTML.png" class="img-fluid" title="HTML icon" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+            <div><img src="/src/images/HTML.png" class="img-fluid" title="HTML icon" id="HTML-img" alt="HTML img"
+                width="30" /><br>HTML
             </div>
-            <div><img src="/src/images/CSS.png" class="img-fluid" title="CSS icon" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+            <div><img src="/src/images/CSS.png" class="img-fluid" title="CSS icon" id="CSS-img" alt="CSS img"
+                width="30" /><br>CSS
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
+                alt="Hosting img" width="30" /><br>Hosting
             </div>
-            <div><img src="/src/images/Editor.png" class="img-fluid" title="Editor icon" id="Editor-img" alt="Editor img"
-                width="30" /><br>Editor
+            <div><img src="/src/images/Editor.png" class="img-fluid" title="Editor icon" id="Editor-img"
+                alt="Editor img" width="30" /><br>Editor
             </div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img" alt="GitHub img"
-                width="30" /><br>GitHub
+            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img"
+                alt="GitHub img" width="30" /><br>GitHub
             </div>
           </div>
         </div>
@@ -142,16 +175,17 @@
               <p class="secondary-link">In process now...</p>
             </a></div>
           <div class="icons">
-            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img" alt="GitHub img"
-                width="30" /><br>GitHub
+            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img"
+                alt="GitHub img" width="30" /><br>GitHub
             </div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
-                width="30" /><br>Flexbox
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img"
+                alt="Flexbox img" width="30" /><br>Flexbox
             </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
+                width="30" /><br>SEO
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
+                alt="Hosting img" width="30" /><br>Hosting
             </div>
             <div><img src="/src/images/React.png" class="img-fluid" title="React icon" id="React-img" alt="React img"
                 width="30" /><br>React
