Add links for certificates

--- a/about.html
+++ b/about.html
@@ -123,29 +123,33 @@
         <div class="row ml-3 mr-3">
           <h3 class="mb-5 text-center">My certificates</h3>
           <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="mb-3 project-img-bg shadow">
-              <img src="/src/images/basic-certificate.png" id="basic-certificate-img" title="Basic certificate img"
-                alt="Basic certificate img" class="img-fluid rounded" />
+            <div class="mb-3 project-img-bg shadow"><a
+                href="https://www.shecodes.io/certificates/17f74c575a95a17e46e60d2fce1ee4f8" target="_blank">
+                <img src="/src/images/basic-certificate.png" id="basic-certificate-img" title="Basic certificate img"
+                  alt="Basic certificate img" class="img-fluid rounded" />
             </div>
-          </div>
+          </div></a>
           <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="mb-3 project-img-bg shadow">
-              <img src="/src/images/front-end-certificate.png" id="front-end-certificate-img"
-                title="Front-end certificate img" alt="Front-end certificate img" class="img-fluid rounded" />
+            <div class="mb-3 project-img-bg shadow"><a
+                href="https://www.shecodes.io/certificates/41d9d26b6f95cc96adb17e450144b049" target="_blank">
+                <img src="/src/images/front-end-certificate.png" id="front-end-certificate-img"
+                  title="Front-end certificate img" alt="Front-end certificate img" class="img-fluid rounded" />
             </div>
-          </div>
+          </div></a>
           <div class="mb-3 col-lg-3 col-md-6 col-sm-6">
-            <div class="project-img-bg shadow">
-              <img src="/src/images/responsive-sertificate.png" id="responsive-sertificate-img"
-                title="Responsive sertificate img" alt="Responsive sertificate img" class="img-fluid rounded" />
+            <div class="project-img-bg shadow"> <a
+                href="https://www.shecodes.io/certificates/bb1670e6e1e3dcfb66632213c530de74" target="_blank">
+                <img src="/src/images/responsive-sertificate.png" id="responsive-sertificate-img"
+                  title="Responsive sertificate img" alt="Responsive sertificate img" class="img-fluid rounded" />
             </div>
-          </div>
+          </div></a>
           <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="project-img-bg shadow">
-              <img src="/src/images/basic-certificate.png" id="react-sertificate-img" title="React sertificate img"
-                alt="React sertificate img" class="img-fluid rounded" />
+            <div class="project-img-bg shadow"><a
+                href="https://www.shecodes.io/certificates/17f74c575a95a17e46e60d2fce1ee4f8" target="_blank">
+                <img src="/src/images/basic-certificate.png" id="react-sertificate-img" title="React sertificate img"
+                  alt="React sertificate img" class="img-fluid rounded" />
             </div>
-          </div>
+          </div></a>
         </div>
       </div>
       <footer>
