--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 alt="Responsive img" width="30" /><br>Responsive <br>Design</div>
           </div>
         </div>
-        <div class="col-md-5 mb-5 mt-3">
+        <div class="col-md-5 mb-5 mt-1">
           <div class="project-img-bg shadow">
             <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" />
           </div>
@@ -172,7 +172,7 @@
             <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" />
           </div>
           <div class="btn-shadow"><a href="" target="_blank" id="btn-follow-projects">
-              <p class="secondary-link">In process now...</p>
+              <p class="secondary-link">Dictionary app (in process now)</p>
             </a></div>
           <div class="icons">
             <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img"
