Changed project description

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,8 @@
           </div>
           <div class="col-md-5 border shadow p-3" id="project-description">
             <h4 class="mb-3 mt-2">React weather app</h4>
-            <p>
+            <p>Before you go anywhere, it's always important to check the weather. <i
+                class="fa-solid fa-temperature-high"></i><br>
               I built a React JavaScript weather app in SheCodes React coding workshop. I combined new skills and
               previously-gained knowledges to create it.
             </p>
@@ -102,8 +103,6 @@
               <div class="col-md-5 border shadow p-3" id="project-description">
                 <h4 class="mb-3 mt-2">Weather app</h4>
                 <p>
-                  Before you go anywhere, it's always important to check the weather. <i
-                    class="fa-solid fa-temperature-high"></i><br>
                   I built a Vanilla JavaScript weather app in SheCodes Plus JavaScript coding workshop.
                   Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API's, real-life
                   development
