Added a new project and certificate

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             </div>
         </nav>
         <div class="header">
-            Contact
+            Contacts
         </div>
         <div class="container mb-5">
             <h4 class="text-center" id="text-header">Feel free to contact me and I will get back as soon as possible!
@@ -73,7 +73,10 @@
                             class="fa-brands fa-square-facebook"></i></a></div>
             </div>
             <footer>
-                <h5 id="footer-contact-page" class="footer-contact-page">This project was coded by Vilena Martirosova and it is<a href="https://github.com/VilenaUKR/Portfolio" target="_blank" title="GitHub Vilena Martirosova" class="footer-contact-page-link" id="gitHub-link"> open-sourced</a></h5>
+                <h5 id="footer-contact-page" class="footer-contact-page">This project was coded by Vilena Martirosova
+                    and it is<a href="https://github.com/VilenaUKR/Portfolio" target="_blank"
+                        title="GitHub Vilena Martirosova" class="footer-contact-page-link" id="gitHub-link">
+                        open-sourced</a></h5>
             </footer>
         </div>
     </body>
