--- a/index.html
+++ b/index.html
@@ -118,31 +118,32 @@
             </div>
           </div>
         </div>
-        <div class="col-md-5 mt-1 mb-5">
-          <div class="project-img-bg shadow">
-            <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
-              alt="Portfolio example img" />
-          </div>
-          <div class="btn-shadow"><a href="/projects.html#portfolio-img" target="_blank" id="btn-follow-projects">
-              <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
-            </a></div>
-          <div class="icons">
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img"
-                alt="Bootstrap img" width="30" /><br>Bootstrap</div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img"
-                alt="Flexbox img" width="30" /><br>Flexbox
-            </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
-                width="30" /><br>SEO
-            </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
-                alt="Hosting img" width="30" /><br>Hosting
-            </div>
-            <div><img src="/src/images/Responsive.png" class="img-fluid" title="Responsive icon" id="Responsive-img"
-                alt="Responsive img" width="30" /><br>Responsive <br>Design</div>
-          </div>
+      <div class="col-md-5 mt-1 mb-5">
+        <div class="project-img-bg shadow">
+          <img src="/src/images/dictionary_project_3.png" class="img-fluid  shadow" id="project-img"
+            alt="Portfolio example img" />
         </div>
-        <div class="col-md-5 mb-5 mt-1">
+        <div class="btn-shadow"><a href="./projects.html#react_dictionary_app-img" target="_blank" id="btn-follow-projects">
+            <p class="secondary-link">React Dictionary app</p>
+          </a></div>
+        <div class="icons">
+          <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img" alt="GitHub img"
+              width="30" /><br>GitHub
+          </div>
+          <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
+              width="30" /><br>Flexbox
+          </div>
+          <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
+              width="30" /><br>SEO
+          </div>
+          <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
+              width="30" /><br>Hosting
+          </div>
+          <div><img src="/src/images/React.png" class="img-fluid" title="React icon" id="React-img" alt="React img"
+              width="30" /><br>React
+          </div>
+        </div></div>
+        <div class="col-md-5 mt-1 mb-5">
           <div class="project-img-bg shadow">
             <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" />
           </div>
@@ -166,31 +167,31 @@
                 alt="GitHub img" width="30" /><br>GitHub
             </div>
           </div>
-        </div>
-        <div class="col-md-5 mt-3">
+        </div><div class="col-md-5 mt-1 mb-5">
           <div class="project-img-bg shadow">
-            <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" />
+            <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
+              alt="Portfolio example img" />
           </div>
-          <div class="btn-shadow"><a href="" target="_blank" id="btn-follow-projects">
-              <p class="secondary-link">Dictionary app (in process now)</p>
+          <div class="btn-shadow"><a href="/projects.html#portfolio-img" target="_blank" id="btn-follow-projects">
+              <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
             </a></div>
           <div class="icons">
-            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img"
-                alt="GitHub img" width="30" /><br>GitHub
-            </div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img"
-                alt="Flexbox img" width="30" /><br>Flexbox
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img"
+                alt="Bootstrap img" width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
+                width="30" /><br>Flexbox
             </div>
             <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
                 width="30" /><br>SEO
             </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
-                alt="Hosting img" width="30" /><br>Hosting
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
             </div>
-            <div><img src="/src/images/React.png" class="img-fluid" title="React icon" id="React-img" alt="React img"
-                width="30" /><br>React
-            </div>
+            <div><img src="/src/images/Responsive.png" class="img-fluid" title="Responsive icon" id="Responsive-img"
+                alt="Responsive img" width="30" /><br>Responsive <br>Design</div>
           </div>
+        </div>
+        
         </div>
         <footer>
           <div class="d-flex justify-content-center mt-5" id="contacts">
