Updated icon`s style

--- a/about.html
+++ b/about.html
@@ -85,38 +85,38 @@
         </div>
         <h3 class="mb-2 mt-5 text-center">My skills</h3>
         <div class="row text-center" id="my-skills-row">
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img"
               alt="HTML img" width="50" /><br>HTML
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img"
               alt="CSS img" width="50" /><br>CSS
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/JavaScript.png" class="img-fluid"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/JavaScript.png" class="img-fluid"
               id="JavaScript-img" alt="JavaScript img" width="50" /><br>JavaScript</div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/React.png" class="img-fluid" id="React-img"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/React.png" class="img-fluid" id="React-img"
               alt="React img" width="50" /><br>React
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Bootstrap.png" class="img-fluid"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Bootstrap.png" class="img-fluid"
               id="Bootstrap-img" alt="Bootstrap img" width="50" /><br>Bootstrap</div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/GitHub.png" class="img-fluid"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/GitHub.png" class="img-fluid"
               id="GitHub-img" alt="GitHub img" width="50" /><br>GitHub
           </div>
 
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Editor.png" class="img-fluid"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Editor.png" class="img-fluid"
               id="Editor-img" alt="Editor img" width="50" /><br>Editor
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Flexbox.png" class="img-fluid"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Flexbox.png" class="img-fluid"
               id="Flexbox-img" alt="Flexbox img" width="50" /><br>Flexbox
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img"
               alt="SEO img" width="50" /><br>SEO
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Hosting.png" class="img-fluid"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Hosting.png" class="img-fluid"
               id="Hosting-img" alt="Hosting img" width="50" /><br>Hosting
           </div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Responsive.png" class="img-fluid"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/Responsive.png" class="img-fluid"
               id="Responsive-img" alt="Responsive img" width="50" /><br>Responsive <br>Design</div>
-          <div class="mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/API.png" class="img-fluid" id="APIL-img"
+          <div class="about-me-icons mb-5 col-lg-1 col-md-2 col-sm-2"><img src="/src/images/API.png" class="img-fluid" id="APIL-img"
               alt="API img" width="50" /> <br>API
           </div>
         </div>
