--- a/index.html
+++ b/index.html
@@ -118,31 +118,83 @@
             </div>
           </div>
         </div>
-      <div class="col-md-5 mt-1 mb-5">
-        <div class="project-img-bg shadow">
-          <img src="/src/images/dictionary_project_3.png" class="img-fluid  shadow" id="project-img"
-            alt="Portfolio example img" />
+        <div class="col-md-5 mt-1 mb-5">
+          <div class="project-img-bg shadow">
+            <img src="/src/images/dictionary_project_3.png" class="img-fluid  shadow" id="project-img"
+              alt="Portfolio example img" />
+          </div>
+          <div class="btn-shadow"><a href="./projects.html#react_dictionary_app-img" target="_blank"
+              id="btn-follow-projects">
+              <p class="secondary-link">React Dictionary app</p>
+            </a></div>
+          <div class="icons">
+            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img"
+                alt="GitHub img" width="30" /><br>GitHub
+            </div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img"
+                alt="Flexbox img" width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
+                width="30" /><br>SEO
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
+                alt="Hosting img" width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/React.png" class="img-fluid" title="React icon" id="React-img" alt="React img"
+                width="30" /><br>React
+            </div>
+          </div>
         </div>
-        <div class="btn-shadow"><a href="./projects.html#react_dictionary_app-img" target="_blank" id="btn-follow-projects">
-            <p class="secondary-link">React Dictionary app</p>
-          </a></div>
-        <div class="icons">
-          <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img" alt="GitHub img"
-              width="30" /><br>GitHub
+        <div class="col-md-5 mt-1 mb-5">
+          <div class="project-img-bg shadow">
+            <img src="/src/images/website_example_2.png" class="img-fluid shadow" id="project-img"
+              alt="Chihuahua img" />
           </div>
-          <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
-              width="30" /><br>Flexbox
+          <div class="btn-shadow"><a href="/projects.html#Lochquarry-img" target="_blank" id="btn-follow-projects">
+              <p class="secondary-link">Website (example)</p>
+            </a></div>
+          <div class="icons">
+            <div><img src="/src/images/HTML.png" class="img-fluid" title="HTML icon" id="HTML-img" alt="HTML img"
+                width="30" /><br>HTML
+            </div>
+            <div><img src="/src/images/CSS.png" class="img-fluid" title="CSS icon" id="CSS-img" alt="CSS img"
+                width="30" /><br>CSS
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
+                alt="Hosting img" width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Editor icon" id="Editor-img"
+                alt="Editor img" width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" title="GitHub icon" id="GitHub-img"
+                alt="GitHub img" width="30" /><br>GitHub
+            </div>
           </div>
-          <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
-              width="30" /><br>SEO
+        </div>
+        <div class="col-md-5 mt-1 mb-5">
+          <div class="project-img-bg shadow">
+            <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
+              alt="Portfolio example img" />
           </div>
-          <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
-              width="30" /><br>Hosting
+          <div class="btn-shadow"><a href="/projects.html#portfolio-img" target="_blank" id="btn-follow-projects">
+              <p class="secondary-link" id="par-follow-projects">Portfolio (example)</p>
+            </a></div>
+          <div class="icons">
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img"
+                alt="Bootstrap img" width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img"
+                alt="Flexbox img" width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
+                width="30" /><br>SEO
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
+                alt="Hosting img" width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/Responsive.png" class="img-fluid" title="Responsive icon" id="Responsive-img"
+                alt="Responsive img" width="30" /><br>Responsive <br>Design</div>
           </div>
-          <div><img src="/src/images/React.png" class="img-fluid" title="React icon" id="React-img" alt="React img"
-              width="30" /><br>React
-          </div>
-        </div></div>
+        </div>
         <div class="col-md-5 mt-1 mb-5">
           <div class="project-img-bg shadow">
             <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" />
@@ -167,44 +219,20 @@
                 alt="GitHub img" width="30" /><br>GitHub
             </div>
           </div>
-        </div><div class="col-md-5 mt-1 mb-5">
-          <div class="project-img-bg shadow">
-            <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
-              alt="Portfolio example img" />
-          </div>
-          <div class="btn-shadow"><a href="/projects.html#portfolio-img" target="_blank" id="btn-follow-projects">
-              <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
-            </a></div>
-          <div class="icons">
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" title="Bootstrap icon" id="Bootstrap-img"
-                alt="Bootstrap img" width="30" /><br>Bootstrap</div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img" alt="Flexbox img"
-                width="30" /><br>Flexbox
-            </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
-                width="30" /><br>SEO
-            </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
-            </div>
-            <div><img src="/src/images/Responsive.png" class="img-fluid" title="Responsive icon" id="Responsive-img"
-                alt="Responsive img" width="30" /><br>Responsive <br>Design</div>
-          </div>
         </div>
-        
-        </div>
-        <footer>
-          <div class="d-flex justify-content-center mt-5" id="contacts">
-            <h5 id="footer" class="m-4">Let's get in touch!</h5>
-            <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
-                class="fa-regular fa-envelope m-4"></i></a>
-
-            <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
-              class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
-            <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
-              class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
-        </footer>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mt-5" id="contacts">
+          <h5 id="footer" class="m-4">Let's get in touch!</h5>
+          <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova" class="email-link"><i
+              class="fa-regular fa-envelope m-4"></i></a>
+
+          <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
+            class="linkedin-link"><i class="fa-brands fa-linkedin  m-4"></i></a>
+          <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
+            class="gitHub-link"><i class="fa-brands fa-github m-4"></i></a>
+      </footer>
+    </div>
   </body>
 
 </html>
