--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div><img src="/src/images/Flexbox.png" class="img-fluid" title="Flexbox icon" id="Flexbox-img"
                 alt="Flexbox img" width="30" /><br>Flexbox
             </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" title="SEO icon" id="SEO-img" alt="SEO img"
-                width="30" /><br>SEO
+            <div><img src="/src/images/JavaScript.png" class="img-fluid" title="JavaScript icon" id="JavaScript-img"
+                alt="JavaScript img" width="30" /><br>JavaScript
             </div>
             <div><img src="/src/images/Hosting.png" class="img-fluid" title="Hosting icon" id="Hosting-img"
                 alt="Hosting img" width="30" /><br>Hosting
